# cs557-functional-languages

./: README.md
hw1/: hw1.lhs  hw1soln.lhs  mandelbrot.hs  q1.hs  q3.hs  q4.hs  q5.hs  question2.hs
hw2/: ch5.hs  ch6.hs  hw2.lhs  hw2soln.lhs  q3.hs  q4.hs
hw3/: hw3.lhs  hw3soln.lhs  q2.hs  q4.hs
hw4/: VizTree.hs  hw4soln.lhs  tree.dot
hw5/: game.hs  hw5.lhs  hw5soln.lhs
practice/week1/: ch1.hs  ch2.hs  ch3.hs  defs.hs  mandelbrot.hs
practice/week2/: practice.hs
practice/week3/: practice.hs
practice/week4/: practice.hs
practice/week5/: practice.hs
practice/week6/: practice.hs
project/haskell-rest-api/: haskell-rest-api.cabal  tree.dot
project/haskell-rest-api/app/: Main.hs
project/haskell-rest-api/src/: Lib.hs  VizTree.hs
project/haskell-rest-api/test/: Spec.hs
