name:                haskell-rest-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-rest-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Treedot,
                       VizTree
  build-depends:       wai,
                       base >= 4.7 && < 5,
                       text,
                       scotty,
                       aeson,
                       postgresql-simple
  default-language:    Haskell2010

executable haskell-rest-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       scotty,
                       postgresql-simple,
                       haskell-rest-api
  default-language:    Haskell2010

test-suite haskell-rest-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       wai,
                       hspec,
                       hspec-setup,
                       hspec-wai,
                       hspec-wai-json,
                       haskell-rest-api,
                       postgresql-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-rest-api
